--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,29 @@
-/* @import "~bootstrap/scss/bootstrap"; */
-
 body {
-  background-color: #140d36;
+  background-color: #2a215a;
 }
-
-/* .App {
-} */
 
 .App-logo {
   height: 50px;
   margin: 10px;
 }
 
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: #140d36;
+  padding: 0 10px;
+  z-index: 10;
+}
+.main-container {
+  margin-top: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.list-block {
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px;
+  background-color: #140d36;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
